--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,15 @@
     "build": "vite build"
   },
   "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "axios": "^1.13.5",
+    "framer-motion": "^12.34.3",
+    "lucide-react": "^0.575.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.13",
+    "@vitejs/plugin-react": "^5.1.4",
+    "vite": "^7.3.1",
     "vite-plugin-react": "^4.0.0"
   }
 }
