--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@azure/msal-browser": "^4.29.0",
+    "@azure/msal-react": "^3.0.27",
     "axios": "^1.13.5",
     "framer-motion": "^12.34.3",
     "lucide-react": "^0.575.0",
