--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,6 +17,7 @@ azure-search-documents==11.6.0
 azure-storage-blob==12.28.0
 backoff==2.2.1
 bcrypt==5.0.0
+beautifulsoup4==4.14.3
 build==1.4.0
 certifi==2026.1.4
 cffi==2.0.0
@@ -147,6 +148,7 @@ semantic-kernel==1.39.4
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.8.3
 SQLAlchemy==2.0.47
 sse-starlette==3.2.0
 starlette==0.52.1
